# superconductors

./: .gitattributes  .gitignore  .gitmodules  README.md  README_GRPO.md  final_report_grpo_dpo.tex  neurips_2024.tex  pyproject.toml  trustworthyFinal.tex
conf/: rl.yaml
conf/grpo/: default.yaml
conf/optim/: rl.yaml
diffcsp/: run_rl.py
diffcsp/common/: utils.py
diffcsp/pl_modules/: cspnet.py  diff_utils.py  diffusion_w_type.py  dpo_module.py
diffcsp/rl/: rewards.py  trainer.py
docs/: app.js  dpo.js  grpo.js  index.html  style.css
docs/data/: dpo_pair.json  dpo_results.json  grpo_progress.json  grpo_samples.json  trajectories.json
dpo/: README.md  __init__.py  module.py  preference_dataset.py  run_dpo.py
dpo/scripts/: audit_pools.py  build_preference_pairs.py  chain_smaller_betas.sh  compute_ehull.py  eval_dpo.sbatch  eval_dpo_one.sbatch  make_figures.py  migrate_eval_b25.sh  migrate_to_devel.sh  migrate_train_b0.1.sh  run_eval_sequential.sh  sample_baseline.sbatch  sample_dpo_ckpt.py  sample_sft_extra.sbatch  score_ehull.py  test_dpo_loss.py  test_pairs_pipeline.py  train_dpo.sbatch
dpo_artifacts/: audit_summary.json
dpo_artifacts/eval/: scores_dpo_b0.5.json  scores_dpo_b25.json  scores_dpo_b5.json  scores_sft_8k_seed1.json
grpo/: README.md  __init__.py  prompts.py  rewards.py  run_grpo.py  trainer.py
scripts/: bee_net_smoketest.py  benchmark_reward_models.py  eval_utils.py  megnet_smoketest.py  train_reward_proxies.py
viz/: export_dpo_pair.py  export_dpo_results.py  export_grpo_progress.py  export_grpo_samples.py  export_trajectory.py
(+42 files in other folders)
