[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "guidediffusion"
version = "0.0.1"
requires-python = ">= 3.9"
dependencies = [
   "torch == 2.3.0",
   "torch-geometric",
   "pytorch_lightning",
   "pymatgen",
   "hydra-core",
   "python-dotenv",
   "wandb",
   "p_tqdm",
   "pyxtal",
   "einops",
   "chgnet>=0.3.8",
   "huggingface-hub>=1.8.0",
   "scikit-learn>=1.6.1",
   "smact>=2.7",
   "chemparse>=0.3.2",
]
description = "Implemetation guided diffusion using property embedding and CFG"
readme = "README.md"

[tool.setuptools.packages.find]
include = ["guidediffusion*", "diffcsp*"]
